--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ speedtest-cli
 coffeehouse==2.2.4
 regex
 bleach
-https://github.com/pypi.org/project/markdown2/
+git+https://github.com/starry69/python-markdown2.git
 wikipedia
 telethon
 telegraph
