--- a/requirements.txt
+++ b/requirements.txt
@@ -1,73 +1,69 @@
-future
-emoji
-lxml
-wget
-gtts
-beautifulsoup4
-requests==2.20.0
-python-telegram-bot==12.8
-sqlalchemy==1.3.20
-psycopg2-binary
-feedparser
-hachoir
-pynewtonmath
-aiofiles
-spongemock
-zalgo-text
-geopy
-nltk
+aiohttp
+asyncio
+bleach==5.0.1
+numpy
+img2pdf
+ffmpeg-python==0.2.0
+redis==4.3.4
+aioredis==2.0.1
+hiredis==2.0.0
+Python_ARQ
+motor
+multicolorcaptcha
+ptbcontrib @ git+https://github.com/python-telegram-bot/ptbcontrib.git@907070d129b7cf80b0236d72fb498667b5b22b63
+Pillow
 psutil
-aiohttp>=2.2.5
-Pillow>=4.2.0
-CurrencyConverter
-#googletrans
-google_trans_new
-jikanpy
-speedtest-cli
-coffeehouse==2.2.4
+psycopg2-binary
+telegraph==2.1.0
+Telethon==1.24.0
+wget
+nekos.py==1.1.0
+pyyaml
+python-arq
+pykeyboard==0.1.5
+pymongo==4.1.1
+pyparsing==3.0.9
+pyrate-limiter==2.8.1
+pretty_errors
+future==0.18.2
+fuzzysearch==0.7.3
+fake-useragent==0.1.11
+beautifulsoup4==4.11.1
+better-profanity==0.7.0
+aiofiles==0.8.0
+search-engine-parser
+SQLAlchemy==1.4.36
+opencv-python-headless==4.6.0.66
+jikanpy==4.3.2
+emoji==2.0.0
+markdown2==2.4.3
+wikipedia==1.4.0
+alphabet-detector==0.0.7
+pymongo[srv]
+envparse==0.2.0
+cloudscraper==1.2.60
+gpytranslate==1.4.0
+hachoir==3.1.3
+secureme
+gTTS
+pyrogram==1.4.16
+ujson
 regex
-bleach
-git+https://github.com/starry69/python-markdown2.git
-wikipedia
-telethon
-telegraph
+bs4
+google_images_download
+google-api-python-client
+googletrans
 heroku3
 spamwatch
-alphabet_detector
-pyrate-limiter
-cachetools
-ujson
-pretty_errors
-TgCrypto
-Pyrogram
-fontTools
-youtube-dl
-youtube_search_python
 youtube_search
-asyncio
-dateparser==1.0.0
-pymongo
-dnspython
-secureme
-apscheduler
-emoji-country-flag
-loguru
-countryinfo
-html2text
-odmantic
-bs4
-bing_image_downloader
-search_engine_parser
-pytz
-lyricsgenius
+youtube-search-python
+gitpython
+youtube_dl
+
+#ANIBOT
+tracemoepy
+lottie
+natsort
+html5lib
+yt-dlp
 tswift
-python-arq
-envparse
-
-#profanity (Credits to Julia)
-better_profanity
-textblob 
-nudepy
-
-motor
-cloudscraper 
