--- a/requirements.txt
+++ b/requirements.txt
@@ -113,7 +113,7 @@ bing_image_downloader
 search_engine_parser
 pytz
 lyricsgenius
-tswift  tswift
+tswift  
 python-arq
 envparse
 #profanity (Credits to Julia)
