--- a/requirements.txt
+++ b/requirements.txt
@@ -59,65 +59,56 @@ youtube_search
 youtube-search-python
 gitpython
 youtube_dl
-gtts
-beautifulsoup4
-requests==2.20.0
-python-telegram-bot==12.8
-sqlalchemy==1.3.20
-psycopg2-binary
-feedparser
-pynewtonmath
-aiofiles
-spongemock
-zalgo-text
-geopy
-nltk
-psutil
-aiohttp>=2.2.5
-Pillow>=4.2.0
-CurrencyConverter
-google_trans_new
-jikanpy
-speedtest-cli
-coffeehouse==2.2.4
-bleach
-wikipedia
-telethon
-heroku3
-spamwatch
-alphabet_detector
-pyrate-limiter
-cachetools
-ujson
-pretty_errors
-TgCrypto
-Pyrogram
-fontTools
-youtube-dl
-youtube_search_python
-youtube_search
-asyncio
-dateparser==1.0.0
-pymongo
-dnspython
-secureme
-apscheduler 
-emoji-country-flag
 loguru
-countryinfo
-html2text
-odmantic
-bs4
-bing_image_downloader
-search_engine_parser
-pytz
-lyricsgenius
-tswift  
-python-arq
-envparse
-#profanity (Credits to Julia)
-better_profanity
-textblob 
-nudepy
-motor
-cloudscraper
+gtts	
+beautifulsoup4	
+requests==2.20.0	
+python-telegram-bot==12.8	
+sqlalchemy==1.3.20	
+psycopg2-binary	
+feedparser	
+pynewtonmath	
+aiofiles	
+spongemock	
+zalgo-text	
+geopy	
+nltk	
+psutil	
+aiohttp>=2.2.5	
+Pillow>=4.2.0	
+CurrencyConverter	
+google_trans_new	
+jikanpy	
+speedtest-cli	
+coffeehouse==2.2.4	
+bleach	
+wikipedia	
+telethon	
+heroku3	
+spamwatch	
+alphabet_detector	
+pyrate-limiter	
+cachetools	
+ujson	
+pretty_errors	
+TgCrypto	
+Pyrogram	
+fontTools	
+youtube-dl	
+youtube_search_python	
+youtube_search	
+asyncio	
+dateparser==1.0.0	
+pymongo	
+dnspython	
+secureme	
+apscheduler 	
+emoji-country-flag
+
+#ANIBOT
+tracemoepy
+lottie
+natsort
+html5lib
+yt-dlp
+tswift
